--- a/css/servicos.css
+++ b/css/servicos.css
@@ -73,7 +73,7 @@
 .containerserv h2{
 	font-size: 60px;
 	text-align: center;
-	font-family: 'Trebuchet MS', cursive;
+	font-family: 'Trebuchet MS', Corbel;
 	font-weight: bold;
 	position: relative;
 	letter-spacing: 8px;
