--- a/css/servicos.css
+++ b/css/servicos.css
@@ -66,8 +66,7 @@
 	width: 360px;
 	height: 6px;
 	margin-top: 32px;
-	background-color: #FF3F13;
-
+	background-color: #003A66;
 }
 
 .containerserv h2{
@@ -77,7 +76,7 @@
 	font-weight: bold;
 	position: relative;
 	letter-spacing: 8px;
-	color: #0A5F93;
+	color: #3F83BE;
 }
 
 .barra-header-serv2{
@@ -87,7 +86,7 @@
 	height: 6px;
 	margin-top: -37px;
 	right: 100px;
-	background-color: #FF3F13;
+	background-color: #003A66;
 
 }
 
