--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-	font-family: "Open Sans", Helvetrica, Arial, sans-serif;
+	font-family: "Trebuchet MS", Helvetrica, Corbel, Arial, sans-serif;
 	color: #4d4d4d;
 	background: black;
 }
@@ -158,10 +158,12 @@ img#logo{
 	width: 50%;
 	height: 100px;
 	position: absolute;
+	z-index: 0;
 	top: -8%;
 	left: 0;
-	background: #137EA5;
+	background: linear-gradient(160deg, #175081,   #175081);
 	transform: skewY(5deg);
+	border-bottom: 6px dashed white;
 }
 
 .wavy1:after{
@@ -169,10 +171,14 @@ img#logo{
 	width: 50%;
 	height: 100px;
 	position: absolute;
+	z-index: 1;
 	top: -8%;
 	right: 0;
-	background: #137EA5;
+	background: #064272;
+	background: linear-gradient(200deg, #175081,  #175081);
 	transform: skewY(-5deg);
+	border-bottom: 6px dashed white;
+	/*box-shadow: 0px 20px 90px 0px white;*/
 }
 /*FIM DO CSS DA BORDA "V" (WAVY)*/
 
@@ -185,11 +191,20 @@ img#logo{
 	text-align: center;
 	margin: 0;
 	padding: 10% 10%;
-	background: linear-gradient(360deg, white, #5CCAF2, #0BB0EC, #14799E );
-	background-size: 50% 400%;
-	animation: animates 10s ease infinite;
+	background: linear-gradient(360deg, #6A9FCC, #206FB3, #154A77 );
 	color: #f1f1f1;
 	top: 0;
+}
+
+.barra-header-emp{
+	content: "";
+	position: absolute;
+	width: 300px;
+	height: 60px;
+	background: transparent;
+	border: solid;
+	border-radius: 0px 90px 0px 90px;
+
 }
 
 #empresa h2{
@@ -198,8 +213,11 @@ img#logo{
 	margin-bottom: 50px;
 	position: relative;
 	z-index: 2;
-	font-family: 'Kaushan Script', cursive;
-	letter-spacing: 8px;
+	font-family: 'Trebuchet MS', Corbel, Arial, sans-serif;
+	font-weight: bold;
+	letter-spacing: -2px;
+	color: #FFFB47;
+	
 }
 #empresa p{
 	text-align: justify;
@@ -208,11 +226,23 @@ img#logo{
 	text-align: center;
 	font-size: 20px;
 	text-indent: 100px;
+	letter-spacing: 1.5px;
+}
+
+#empresa p span{
+	font-weight: bold;
+	color: #FFFB47;
+	font-size: 27px;
+	letter-spacing: 2px;
 }
 
 #empresa .buton{
-	background-color: #FFF;
-	color: rgb(62, 93, 104);
+	background-color: transparent;
+	color: #FFFB47;
+	font-weight: bold;
+	font-size: 34px;
+	border: solid white;
+	border-radius: 20px 0px 20px 20px;
 }
 
 .buton{
@@ -221,7 +251,12 @@ img#logo{
 	font-size: .9em;
 	border-radius:3px;
 	border-radius: 10px 10px;
-	box-shadow: 2px 2px 2px 2px;
+}
+
+#empresa .buton:hover{
+	background-color: #FFFB47;
+	color: #1B70BA;
+	border: solid #1B70BA;
 }
 /*-- EFEITOS DE ANIMAÇÃO DOS BOTÃO --*/
 [data-anime] {
