--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,36 @@ CONTATO
 }
 */
 
+
+
+/*CSS Botão Voltar TOPO*/
+.btn-voltar-topo{
+	display: none;
+	z-index: 10;
+	position: fixed;
+	bottom: 4%;
+	right: 3%;
+	width: 130px;
+	height: 50px;
+	background-color: #fff;
+	border-radius: 6px;
+
+}
+.btn-voltar-link{
+	display: block;
+	width: 100%;
+	height: 100%;
+	line-height: 50px;
+	text-align: center;
+	color: #000;
+	font-weight: bold;
+	font-size: 0.8em;
+	text-decoration: none;
+}
+/*FIM CSS BOTÃO VOLTAR TOPO*/
+
+
+
 /*
 FOOTER
 */
